# log-lottery

./: .dockerignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  package.json  render.yaml  test_data_generator.js  vercel-build.sh  vercel.json  vite.config.js  vite.config.ts
.config/opencode/: opencode.json
__test__/: Register.test.ts
api/: index.js  package.json
src/: window.d.ts
src/api/: person.ts
src/hooks/useElement/: index.ts
src/layout/RightButton/: index.vue
src/router/: index.ts
src/store/: data.ts  personConfig.ts
src/style/: style.scss
src/types/: formType.ts  storeType.ts
src/utils/: index.ts  personDraft.ts
src/views/Demo/: index.vue
src/views/Home/: index.vue  useViewModel.ts
src/views/Home/components/QRCode/: index.vue
src/views/Mobile/: index.vue
src/views/Register/: index.vue
ws_server/: Cargo.toml  nohup.out
ws_server/src/: main.rs
