[package]
name = "ws_server"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11"
actix-cors = "0.7.1"
actix-web = "4"
actix-ws = { version = "0.3.0" }
actix = "0.12.0"
actix-web-actors = "4"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt", "time", "macros"] }
tokio-stream = { version = "^0.1.18", features = ["full"] }
