[package]
name = "ws_server"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10"
actix-cors = "0.6"
actix-web = "4"
actix-ws = { version = "0.2" }
actix = "0.12"
actix-web-actors = "4"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt", "time", "macros"] }
tokio-stream = { version = "0.1", features = ["full"] }
